--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:timeline="http://schemas.android.com/apk/res/pl.patecki.timeline"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,7 +13,8 @@
 	    android:orientation="horizontal"
 	    android:layout_width="300dp"
 	    android:id="@+id/horizontal"
-	    android:layout_height="300dp">
+	    android:layout_height="300dp"
+	    timeline:minimal_event_width="50dp">
 	    
 	</pl.patecki.timeline.HorizontalTimeLine>
 </RelativeLayout>
