--- a/res/layout/event_layout_basic.xml
+++ b/res/layout/event_layout_basic.xml
@@ -8,7 +8,7 @@
         android:id="@+id/time_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -16,7 +16,7 @@
         android:id="@+id/title_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/time_field"
         android:textAppearance="?android:attr/textAppearanceSmall" />
     
@@ -25,5 +25,10 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:background="#FF0000FF" />
+    
+    <pl.patecki.timeline.presentation.ScaleLineView
+        android:id="@+id/lineView"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp" />
 
 </RelativeLayout>
