--- a/res/layout/event_layout_basic.xml
+++ b/res/layout/event_layout_basic.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background" >
+    android:layout_height="match_parent" >
+
+    <!-- android:background="@drawable/background" -->
 
     <TextView
         android:id="@+id/time_field"
@@ -19,18 +20,14 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/time_field"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-    <pl.patecki.timeline.presentation.ScaleLineView
-        android:layout_below="@+id/title_field"
-        android:id="@+id/lineView"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp" />
-    
+
     <View
-        android:layout_below="@+id/lineView"
-        android:id="@+id/line"
-        android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:background="#FF0000FF" />
+        android:id="@+id/marker"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="#0000ff" />
+    <!-- android:layout_marginRight="100dp" -->
 
 </RelativeLayout>
